node pg, express e fetch

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <ul id="listaTarefas"></ul>
 
 <section class="opcoes">
-    <input type="text" id="inserirInput" placeholder="Inserir tarefa.">
+    <input type="text" id="inserirInput" placeholder="Inserir tarefa."/>
     <button onclick="addTarefas()">Adicionar</button>
 </section>
 
